MonitoringService for scheduled monitoring execution

--- a/EndpointsMonitoring/WebService/build.gradle
+++ b/EndpointsMonitoring/WebService/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'mysql:mysql-connector-java:8.0.19'
     implementation project(path: ':Domain')
+    implementation project(path: ':WebMonitoring')
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
