--- a/EndpointsMonitoring/WebService/src/main/resources/application.properties
+++ b/EndpointsMonitoring/WebService/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.jpa.database=mysql
 spring.datasource.username=root
 spring.datasource.password=***
 spring.jpa.hibernate.ddl-auto=none
+
+scheduledThreadPoolSize=1
+fixedThreadPoolSize=10
