--- a/EndpointsMonitoring/WebService/build.gradle
+++ b/EndpointsMonitoring/WebService/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'mysql:mysql-connector-java:8.0.19'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation project(path: ':Domain')
     implementation project(path: ':WebMonitoring')
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
