validation of contracts

--- a/EndpointsMonitoring/WebService/src/main/resources/application.properties
+++ b/EndpointsMonitoring/WebService/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=***
 spring.jpa.hibernate.ddl-auto=none
 
+server.error.include-binding-errors=always
+
 scheduledThreadPoolSize=1
 fixedThreadPoolSize=10
