--- a/EndpointsMonitoring/Domain/build.gradle
+++ b/EndpointsMonitoring/Domain/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.springframework.data:spring-data-commons:3.0.0'
+    implementation 'org.springframework.data:spring-data-jpa:3.0.1'
     implementation 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
