--- a/EndpointsMonitoring/WebService/src/main/resources/application.properties
+++ b/EndpointsMonitoring/WebService/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 server.error.include-binding-errors=always
 
+server.shutdown=graceful
+
 scheduledThreadPoolSize=1
 fixedThreadPoolSize=10
