--- a/EndpointsMonitoring/docker-compose.yml
+++ b/EndpointsMonitoring/docker-compose.yml
@@ -4,12 +4,19 @@ services:
     container_name: endpoint_monitoring_db
     command: --init-file '/var/lib/db_init.sql'
     ports:
-      - 33060:3306
+      - 3306:3306
     volumes:
       - my_sql_volume:/var/lib/mysql
       - ./../db/db_init.sql:/var/lib/db_init.sql
     environment:
       MYSQL_ROOT_PASSWORD: '***'
+  webservice:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    container_name: endpoint_monitoring_service
+    ports:
+      - "8080:8080"
       
 volumes:
   my_sql_volume:
